<resources>
    <string name="app_name">Wadifti</string>
    <string name="action_settings">Settings</string>
    <string name="new_cv">New CV</string>
    <string name="h_d">High School Degree</string>
    <string name="u_d">University Degree</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="name">Name:</string>
    <string name="firstName">First Name:</string>
    <string name="middleName">Middle Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="placeOfBirth">Place of Birth:</string>
    <string name="dateOfBirth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="adddress1">Address:</string>
    <string name="adddress2">Address2:</string>
    <string name="status">Status:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="pobox">P.O.Box:</string>
    <string name="extraInfo">Extra Information:</string>
    <string-array name="nationality">
        <item>Afghan</item>
        <item>Albanian</item>
        <item>Algerian</item>
        <item>American</item>
        <item>Andorran</item>
        <item>Angolan</item>
        <item>Antiguans</item>
        <item>Argentinean</item>
        <item>Armenian</item>
        <item>Australian</item>
        <item>Austrian</item>
        <item>Azerbaijani</item>

        <item>Bahamian</item>
        <item>Bahraini</item>
        <item>Bangladeshi</item>
        <item>Barbadian</item>
        <item>Barbudans</item>
        <item>Batswana</item>
        <item>Belarusian</item>
        <item>Belgian</item>
        <item>Belizean</item>
        <item>Beninese</item>
        <item>Bhutanese</item>
        <item>Bolivian</item>
        <item>Bosnian</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Bruneian</item>
        <item>Bulgarian</item>
        <item>Burkinabe</item>
        <item>Burmese</item>
        <item>Burundian</item>

        <item>Cambodian</item>
        <item>Cameroonian</item>
        <item>Canadian</item>
        <item>Cape Verdean</item>
        <item>Central African</item>
        <item>Chadian</item>
        <item>Chilean</item>
        <item>Chinese</item>
        <item>Colombian</item>
        <item>Comoran</item>
        <item>Congolese</item>
        <item>Costa Rican</item>
        <item>Croatian</item>
        <item>Cuban</item>
        <item>Cypriot</item>
        <item>Czech</item>

        <item>Danish</item>
        <item>Djibouti</item>
        <item>Dominican</item>
        <item>Dominican</item>
        <item>Dutch</item>
        <item>Dutchman</item>
        <item>Dutchwoman</item>

        <item>East Timorese</item>
        <item>Ecuadorean</item>
        <item>Egyptian</item>
        <item>Emirian</item>
        <item>Equatorial Guinean</item>
        <item>Eritrean</item>
        <item>Estonian</item>
        <item>Ethiopian</item>

        <item>Fijian</item>
        <item>Filipino</item>
        <item>Finnish</item>
        <item>French</item>

        <item>Gabonese</item>
        <item>Gambian</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Ghanaian</item>
        <item>Greek</item>
        <item>Grenadian</item>
        <item>Guatemalan</item>
        <item>Guinea-Bissauan</item>
        <item>Guinean</item>
        <item>Guyanese</item>

        <item>Haitian</item>
        <item>Herzegovinian</item>
        <item>Honduran</item>
        <item>Hungarian</item>

        <item>I-Kiribati</item>
        <item>Icelander</item>
        <item>Indian</item>
        <item>Indonesian</item>
        <item>Iranian</item>
        <item>Iraqi</item>
        <item>Irish</item>
        <item>Irish</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Ivorian</item>

        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Jordanian</item>

        <item>Kazakhstani</item>
        <item>Kenyan</item>
        <item>Kittian and Nevisian</item>
        <item>Kuwaiti</item>
        <item>Kyrgyz</item>

        <item>Laotian</item>
        <item>Latvian</item>
        <item>Lebanese</item>
        <item>Liberian</item>
        <item>Libyan</item>
        <item>Liechtensteiner</item>
        <item>Lithuanian</item>
        <item>Luxembourger</item>

        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malawian</item>
        <item>Malaysian</item>
        <item>Maldivan</item>
        <item>Malian</item>
        <item>Maltese</item>
        <item>Marshallese</item>
        <item>Mauritanian</item>
        <item>Mauritian</item>
        <item>Mexican</item>
        <item>Micronesian</item>
        <item>Moldovan</item>
        <item>Monacan</item>
        <item>Mongolian</item>
        <item>Moroccan</item>
        <item>Mosotho</item>
        <item>Motswana</item>
        <item>Mozambican</item>

        <item>Namibian</item>
        <item>Nauruan</item>
        <item>Nepalese</item>
        <item>Netherlander</item>
        <item>New Zealander</item>
        <item>Ni-Vanuatu</item>
        <item>Nicaraguan</item>
        <item>Nigerian</item>
        <item>Nigerien</item>
        <item>North Korean</item>
        <item>Northern Irish</item>
        <item>Norwegian</item>

        <item>Omani</item>

        <item>Pakistani</item>
        <item>Palauan</item>
        <item>Panamanian</item>
        <item>Papua New Guinean</item>
        <item>Paraguayan</item>
        <item>Peruvian</item>
        <item>Polish</item>
        <item>Portuguese</item>

        <item>Qatari</item>

        <item>Romanian</item>
        <item>Russian</item>
        <item>Rwandan</item>

        <item>Saint Lucian</item>
        <item>Salvadoran</item>
        <item>Samoan</item>
        <item>San Marinese</item>
        <item>Sao Tomean</item>
        <item>Saudi</item>
        <item>Scottish</item>
        <item>Senegalese</item>
        <item>Serbian</item>
        <item>Seychellois</item>
        <item>Sierra Leonean</item>
        <item>Singaporean</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Solomon Islander</item>
        <item>Somali</item>
        <item>South African</item>
        <item>South Korean</item>
        <item>Spanish</item>
        <item>Sri Lankan</item>
        <item>Sudanese</item>
        <item>Surinamer</item>
        <item>Swazi</item>
        <item>Swedish</item>
        <item>Swiss</item>
        <item>Syrian</item>

        <item>Taiwanese</item>
        <item>Tajik</item>
        <item>Tanzanian</item>
        <item>Thai</item>
        <item>Togolese</item>
        <item>Tongan</item>
        <item>Trinidadian or Tobagonian</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Tuvaluan</item>

        <item>Ugandan</item>
        <item>Ukrainian</item>
        <item>Uruguayan</item>
        <item>Uzbekistani</item>

        <item>Venezuelan</item>
        <item>Vietnamese</item>

        <item>Welsh</item>
        <item>Welsh</item>

        <item>Yemenite</item>

        <item>Zambian</item>
        <item>Zimbabwean</item>
    </string-array>
    <string name="upload_cv">Upload a CV File</string>
    <string name="Next">Next</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="help_main">By pressing one of these buttons you will be able to search for a job, apply for one or even creating a CV</string>
    <string name="companyName" />
    <string name="companyAddress" />
    <string-array name="majors">
        <item>(undeclared)</item>
        <item>Aerospace Engineering</item>
        <item>African Languages</item>
        <item>African Studies</item>
        <item>African Studies Interdepartmental Program</item>
        <item>Afro-American Studies</item>
        <item>Afro-American Studies Interdepartmental Program</item>
        <item>American Indian Studies</item>
        <item>American Indian Studies Interdepartmental Program</item>
        <item>American Literature and Culture</item>
        <item>Ancient Near Eastern Civilizations</item>
        <item>Anthropology</item>
        <item>Applied Linguistics</item>
        <item>Applied Mathematics</item>
        <item>Arabic</item>
        <item>Archaeology</item>
        <item>Archaeology Interdepartmental Program</item>
        <item>Architectural Studies</item>
        <item>Architecture</item>
        <item>Art</item>
        <item>Art History</item>
        <item>Asian American Studies</item>
        <item>Asian Humanities</item>
        <item>Asian Languages and Cultures</item>
        <item>Asian Religions</item>
        <item>Astronomy</item>
        <item>Astrophysics</item>
        <item>Atmospheric and Oceanic Sciences</item>
        <item>Atmospheric, Oceanic, and Environmental Sciences</item>
        <item>Biochemistry</item>
        <item>Biochemistry and Molecular Biology</item>
        <item>Bioengineering</item>
        <item>Bioinformatics Interdepartmental Program</item>
        <item>Biological Chemistry</item>
        <item>Biology</item>
        <item>Biomathematics</item>
        <item>Biomedical Engineering</item>
        <item>Biomedical Engineering Interdepartmental Program</item>
        <item>Biomedical Physics</item>
        <item>Biomedical Physics Interdepartmental Program</item>
        <item>Biophysics</item>
        <item>Biostatistics</item>
        <item>Business Economics</item>
        <item>Cellular and Molecular Pathology</item>
        <item>Central and East European Languages and Cultures</item>
        <item>Chemical Engineering</item>
        <item>Chemistry</item>
        <item>Chemistry/Materials Science</item>
        <item>Chemistry/Materials Science Interdepartmental Program</item>
        <item>Chicana and Chicano Studies</item>
        <item>Chinese</item>
        <item>Civil Engineering</item>
        <item>Classical Civilization</item>
        <item>Classics</item>
        <item>Clinical Research</item>
        <item>Cognitive Science</item>
        <item>Communication Studies</item>
        <item>Comparative Literature</item>
        <item>Computational and Systems Biology</item>


    </string-array>
    <string-array name="states">
        <item>Undergraduate</item>
        <item>Graduate</item>
    </string-array>
</resources>