<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="qa.edu.qu.cmps497.gainmoney.MainActivity">


        <Button
            android:text="@string/new_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:visibility="visible"
            android:layout_gravity="center_horizontal" />

        <Button
            android:text="@string/h_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:text="@string/u_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

