<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="qa.edu.qu.cmps497.gainmoney.NewCV">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_cv"
            android:id="@+id/new_cv"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

    </TableRow>
    <!--
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/name"
             android:text="@string/name"
             android:layout_column="0"

             />

         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/n"
             android:layout_column="1"
             />
     </TableRow>
     -->

    <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/fn"
              android:text="@string/firstName"
              android:layout_column="0"
              android:visibility="visible"
              />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:ems="10"
              android:id="@+id/firstName"
              android:layout_column="1"
              android:visibility="visible"
              />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/mn"
              android:text="@string/middleName"
              android:layout_column="0"
              android:visibility="visible"
              />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:ems="10"
              android:id="@+id/middleName"
              android:layout_column="1"
              android:visibility="visible"
              />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/ln"
              android:text="@string/lastName"
              android:layout_column="0"
              android:visibility="visible"
              />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPersonName"
              android:ems="10"
              android:id="@+id/lastName"
              android:layout_column="1"
              android:visibility="visible"
              />
      </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:text="@string/gender"
            android:layout_column="0"
            android:visibility="visible"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="female"
                android:visibility="visible"/>

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="male"
                android:visibility="visible"/>

        </RadioGroup>

    </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/pob"
              android:text="@string/placeOfBirth"
              android:layout_column="0"
              android:visibility="visible"
              />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textAutoComplete"
              android:ems="10"
              android:id="@+id/placeOfBirth"
              android:layout_column="1"
              android:visibility="visible"
              />
      </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nationality"
            android:text="@string/nationality"
            android:layout_column="0"
            android:visibility="visible"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Nationality"
            android:entries="@array/nationality"
            android:spinnerMode="dropdown"
            android:visibility="visible"/>
    </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

          <Button
              android:text="@string/Next"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/button5"
              android:layout_gravity="center_horizontal"
              android:layout_column="1"
              android:visibility="visible"
              />
      </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adress1"
            android:text="@string/adddress1"
            android:layout_column="0"
            android:visibility="gone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/address1"
            android:layout_column="1"
            android:visibility="gone"
            />
    </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mobile"
            android:text="@string/mobile"
            android:layout_column="0"
            android:visibility="gone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/mobileNum"
            android:layout_column="1"
            android:visibility="gone"
            />
    </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="@string/email"
            android:layout_column="0"
            android:visibility="gone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailAddress"
            android:layout_column="1"
            android:visibility="gone"
            />
    </TableRow>

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pobox"
            android:text="@string/pobox"
            android:layout_column="0"
            android:visibility="gone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/poBox"
            android:layout_column="1"
            android:visibility="gone"
            />
    </TableRow>


    <!--<TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateob"
            android:text="@string/dateOfBirth"
            android:layout_column="0"
            />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dob"
            android:layout_column="0"
            />
    </TableRow>-->

      <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/extraInfo"
            android:text="@string/extraInfo"
            android:layout_column="0"
            android:visibility="gone"
            />

        <MultiAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_column="1"
            android:visibility="gone"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:layout_column="1"
            android:visibility="gone"
            />
        </TableRow>
</TableLayout>
